--- a/Ubik.UI.MVC/Web.config
+++ b/Ubik.UI.MVC/Web.config
@@ -16,10 +16,10 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <!--<add name="authconnectionstring" connectionString="Server=.\X2012;Database=UbikAuth;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />
-    <add name="cmsconnectionstring" connectionString="Server=.\X2012;Database=Ubik;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />-->
-      <add name="authconnectionstring" connectionString="Server=.\MSSQL2012;Database=UbikAuth;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
-    <add name="cmsconnectionstring" connectionString="Server=.\MSSQL2012;Database=Ubik;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
+    <add name="authconnectionstring" connectionString="Server=.\X2012;Database=UbikAuth;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />
+    <add name="cmsconnectionstring" connectionString="Server=.\X2012;Database=Ubik;User Id=ubikuser;Password=qazwsx123!@#;" providerName="System.Data.SqlClient" />
+      <!--<add name="authconnectionstring" connectionString="Server=.\MSSQL2012;Database=UbikAuth;Trusted_Connection=true;" providerName="System.Data.SqlClient" />
+    <add name="cmsconnectionstring" connectionString="Server=.\MSSQL2012;Database=Ubik;Trusted_Connection=true;" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
