closing https://github.com/mitsbits/Ubik/issues/23 - almost daone with https://github.com/mitsbits/Ubik/issues/24

--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -60,6 +60,7 @@
     <Compile Include="DataManagement\Group\GroupingHelper.cs" />
     <Compile Include="DataManagement\Group\IGroupingService.cs" />
     <Compile Include="DataManagement\Group\IGroupValidatorService.cs" />
+    <Compile Include="Contracts\IPagedResult.cs" />
     <Compile Include="DataManagement\OrderByInfo.cs" />
     <Compile Include="DataManagement\PagedResult.cs" />
     <Compile Include="Ext\CollectionExtensions.cs" />
