--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Contracts\IHierarchyData.cs" />
     <Compile Include="Contracts\IKeyAdjuster.cs" />
     <Compile Include="Contracts\IKeyAdjusterProvider.cs" />
+    <Compile Include="Contracts\ILoggingService.cs" />
     <Compile Include="Contracts\IQueryRepository.cs" />
     <Compile Include="Contracts\IReadAsyncRepository.cs" />
     <Compile Include="Contracts\IReadRepository.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="DataManagement\PagedResult.cs" />
     <Compile Include="Ext\CollectionExtensions.cs" />
     <Compile Include="Ext\SerializationExtensions.cs" />
+    <Compile Include="LogEntryType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerResponseStatus.cs" />
   </ItemGroup>
