--- a/Ubik.EF/Ubik.EF.csproj
+++ b/Ubik.EF/Ubik.EF.csproj
@@ -59,6 +59,7 @@
     <Compile Include="BaseReadWriteRepository.cs" />
     <Compile Include="BaseRepositoryWithAmbientContext.cs" />
     <Compile Include="Contracts\IRepositoryWithContext.cs" />
+    <Compile Include="DbContextFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadRepository.cs" />
     <Compile Include="ReadWriteRepository.cs" />
