--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -698,6 +698,7 @@
     <Content Include="Areas\Backoffice\Views\Devices\Partials\DeviceSectionSlotDetail.cshtml" />
     <Content Include="Areas\Backoffice\Views\ErrorLogs\Index.cshtml" />
     <Content Include="Areas\Backoffice\Views\ErrorLogs\Partials\ClearErrorLogsForTimeRange.cshtml" />
+    <Content Include="Areas\Backoffice\Views\ErrorLogs\Partials\ErrorLogList.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
