--- a/Ubik.UI.MVC/packages.config
+++ b/Ubik.UI.MVC/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net451" />
   <package id="Autofac.Mvc5.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Autofac.Owin" version="3.1.0" targetFramework="net451" />
+  <package id="Autofac.WebApi" version="3.1.0" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net451" />
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net451" />
