--- a/Ubik.Web.EF/Ubik.Web.EF.csproj
+++ b/Ubik.Web.EF/Ubik.Web.EF.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="Components\ComponentsDbContext.cs" />
     <Compile Include="Components\Contracts\IPersistedTaxonomyDivisionRepository.cs" />
+    <Compile Include="Components\Contracts\IPersistedTextualRepository.cs" />
     <Compile Include="Components\DeviceRepository.cs" />
     <Compile Include="Components\Mapper.cs" />
     <Compile Include="Components\PersistedComponents.cs" />
@@ -67,6 +68,7 @@
     <Compile Include="Components\PersistedTaxonomyDivisionRepository.cs" />
     <Compile Include="Components\PersistedTaxonomyElement.cs" />
     <Compile Include="Components\PersistedTaxonomyElementRepository.cs" />
+    <Compile Include="Components\PersistedTextual.cs" />
     <Compile Include="ElmahDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
