--- a/Ubik.UI.MVC/Ubik.UI.MVC.csproj
+++ b/Ubik.UI.MVC/Ubik.UI.MVC.csproj
@@ -701,6 +701,9 @@
     <Content Include="Areas\Backoffice\Views\ErrorLogs\Index.cshtml" />
     <Content Include="Areas\Backoffice\Views\ErrorLogs\Partials\ClearErrorLogsForTimeRange.cshtml" />
     <Content Include="Areas\Backoffice\Views\ErrorLogs\Partials\ErrorLogList.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Taxonomies\Divisions.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Taxonomies\Partials\DivisionDetails.cshtml" />
+    <Content Include="Areas\Backoffice\Views\Taxonomies\Partials\DivisionList.cshtml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
