--- a/Ubik.Web.Components.AntiCorruption/Ubik.Web.Components.AntiCorruption.csproj
+++ b/Ubik.Web.Components.AntiCorruption/Ubik.Web.Components.AntiCorruption.csproj
@@ -56,9 +56,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contracts\IDeviceAdministrationViewModelService.cs" />
+    <Compile Include="Contracts\ITaxonomiesViewModelService.cs" />
     <Compile Include="DeviceAdministrationAuth.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DeviceAdministrationService.cs" />
+    <Compile Include="Services\TaxonomiesViewModelService.cs" />
     <Compile Include="ViewModels\Devices\DeviceViewModel.cs" />
     <Compile Include="ViewModels\Devices\SectionViewModel.cs" />
     <Compile Include="ViewModels\Devices\SlotViewModel.cs" />
