--- a/Ubik.EF/Ubik.EF.csproj
+++ b/Ubik.EF/Ubik.EF.csproj
@@ -60,10 +60,12 @@
     <Compile Include="BaseReadWriteRepository.cs" />
     <Compile Include="BaseRepositoryWithAmbientContext.cs" />
     <Compile Include="Contracts\IRepositoryWithContext.cs" />
+    <Compile Include="Contracts\ISequenceProvider.cs" />
     <Compile Include="DbContextFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadRepository.cs" />
     <Compile Include="ReadWriteRepository.cs" />
+    <Compile Include="SequenceProviderDbContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
