view models for https://github.com/mitsbits/Ubik/issues/26

--- a/Ubik.Infra/Ubik.Infra.csproj
+++ b/Ubik.Infra/Ubik.Infra.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Contracts\IHierarchyData.cs" />
     <Compile Include="Contracts\IKeyAdjuster.cs" />
     <Compile Include="Contracts\IKeyAdjusterProvider.cs" />
+    <Compile Include="Contracts\ILog.cs" />
     <Compile Include="Contracts\ILoggingService.cs" />
     <Compile Include="Contracts\IQueryRepository.cs" />
     <Compile Include="Contracts\IReadAsyncRepository.cs" />
