vnext DI for https://github.com/mitsbits/Ubik/issues/30

--- a/Ubik.Web.Client.Backoffice/project.json
+++ b/Ubik.Web.Client.Backoffice/project.json
@@ -8,6 +8,7 @@
   "frameworks": {
     "net46": {
       "dependencies": {
+        "Ubik.Cache": "1.0.0-*",
         "Ubik.Infra": "1.0.0-*"
       }
     }
