--- a/Ubik.Web.Client.Backoffice/project.json
+++ b/Ubik.Web.Client.Backoffice/project.json
@@ -1,10 +1,12 @@
 {
-  "version": "1.0.0-*",
-  "description": "Ubik.Web.Client.Backoffice Class Library",
   "authors": [ "mitsbits" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
+  "dependencies": {
+    "elmah": "1.2.2",
+    "Ubik.Web.Basis": "1.0.0-*",
+    "Ubik.Web.Components.AntiCorruption": "1.0.0-*",
+    "Ubik.Web.Membership": "1.0.0-*"
+  },
+  "description": "Ubik.Web.Client.Backoffice Class Library",
   "frameworks": {
     "net46": {
       "dependencies": {
@@ -13,10 +15,9 @@
       }
     }
   },
-  "dependencies": {
-    "elmah": "1.2.2",
-    "Ubik.Web.Basis": "1.0.0-*",
-    "Ubik.Web.Components.AntiCorruption": "1.0.0-*",
-    "Ubik.Web.Membership": "1.0.0-*"
-  }
+  "licenseUrl": "",
+  "projectUrl": "",
+  "resource": [ "compiler/resources/MainMenu.xml" ],
+  "tags": [ "" ],
+  "version": "1.0.0-*"
 }
