Added admin lte to backoffice layout - https://github.com/mitsbits/Ubik/issues/30

--- a/Ubik.UI.Backoffice/appsettings.ubik.json
+++ b/Ubik.UI.Backoffice/appsettings.ubik.json
@@ -1,6 +1,6 @@
 ﻿{
   "Data": {
-    "cmsconnection": {"ConnectionString" :  ""},
-    "authconnection": { "ConnectionString": "" }
+    "cmsconnection": { "ConnectionString": "Server=.;Database=Ubik;User Id=ubikuser;Password=qazwsx123!@#;" },
+    "authconnection": { "ConnectionString": "Server=.;Database=UbikAuth;User Id=ubikuser;Password=qazwsx123!@#;" }
   }
 }
