--- a/Ubik.Web.Client.Backoffice/project.json
+++ b/Ubik.Web.Client.Backoffice/project.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "elmah": "1.2.2",
     "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
     "Ubik.Web.Basis": "1.0.0-*",
     "Ubik.Web.Components.AntiCorruption": "1.0.0-*",
     "Ubik.Web.Membership": "1.0.0-*"
